--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
 </head>
 <body>
 
-<h1>Portfolio</h1>
-<p>Welcome to my porfolio.</p>
-
-</body>
+  <div id="header">
+    <h1>Jero Bado</h1>
+  </div>
+  
+  <div id="desktop-dev">
+    <p>Desktop Development</p>
+  </div>
+  
+  <div id="web-dev">
+    <p>Web Development</p>
+  </div>
+  
+  <div id="database-dev">
+    <p>Database Development</p>
+  </div>
+  
+  <div id="orbital-mechanics">
+    <p>Orbital Mechanics</p>
+  </div>
+  
+  <div id="machine-learning">
+    <p>Machine Learning</p>
+  </div>
+  
+  </body>
 </html>
